--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.model=gpt-3.5-turbo
 spring.threads.virtual.enabled=true
+
+speechKey=${speechKey}
