--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.model=gpt-3.5-turbo
 spring.threads.virtual.enabled=true
 
-speechKey=${speechKey}
+speech.key=${SPEECH_KEY:}
