--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.2'
+	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
-	id 'org.graalvm.buildtools.native' version '0.10.4'
+	id 'org.graalvm.buildtools.native' version '0.10.6'
 }
 
 group = 'net.ghaines.ai'
@@ -17,14 +17,14 @@ repositories {
 }
 
 ext {
-	set('springAiVersion', "1.0.0-M5")
+	set('springAiVersion', "1.0.0")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
